--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "mocha": "1.14.*",
     "should": "2.1.*",
     "supertest": "0.8.*",
+    "istanbul" : "0.1.45",
     "coveralls": "~2.5.0",
     "mocha-lcov-reporter": "0.0.1"
   },
   "scripts": {
     "test": "mocha",
-    "coveralls": "NODE_ENV=test istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js; rm -fr coverage/"
+    "coveralls": "NODE_ENV=test ./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js; rm -fr coverage/"
   }
 }
