--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "mocha-lcov-reporter": "0.0.1"
   },
   "scripts": {
-    "test": "./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec test/spec test/",
-    "coveralls": "cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js; rm -fr coverage/"
+    "test": "mocha"
   }
 }
